# lvgl_lite

./: .gitignore  CMakeLists.txt
